--- a/index.html
+++ b/index.html
@@ -32,6 +32,9 @@
   }
 }
 </style>
+  <title>nexbing</title>
+  <link rel="icon" type="image/x-icon" href="https://scontent.fdac5-2.fna.fbcdn.net/v/t39.30808-6/294565351_434853571985732_7566418601520847003_n.png?_nc_cat=101&ccb=1-7&_nc_sid=09cbfe&_nc_ohc=uHf1utO-mhMAX9I07zy&_nc_ht=scontent.fdac5-2.fna&oh=00_AT8Ok__s8KnanaDvztPHJSpStYzxnFABI7Zg7D9nioJ7Vw&oe=63546ECA">
+  
 </head>
 
 <body>
