--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@ https://www.tooplate.com/view/2115-marvel
                 <ul class="navbar-nav ml-lg-auto">
                     <div class="ml-lg-4">
                       <div class="color-mode d-lg-flex justify-content-center align-items-center">
-                        <i class="color-mode-icon"></i>
+                        <h5>boop!</h5>
                       </div>
                     </div>
                 </ul>
