--- a/index.html
+++ b/index.html
@@ -31,6 +31,16 @@ https://www.tooplate.com/view/2115-marvel
     <nav class="navbar navbar-expand-sm navbar-light">
         <div class="container">
             <a class="navbar-brand" href="index.html"></i>nexbing</a>
+      
+      <div class="navbar-toggler">
+              <ul class="navbar-nav ml-lg-auto">
+                  <div class="ml-lg-4">
+                    <div class="color-mode d-lg-flex justify-content-center align-items-center">
+                      <h5>boop!</h5>
+                    </div>
+                  </div>
+              </ul>
+          </div>
 
       <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav ml-lg-auto">
