--- a/index.html
+++ b/index.html
@@ -62,11 +62,11 @@ https://www.tooplate.com/view/2115-marvel
                 <div class="col-lg-7 col-md-12 col-12 d-flex align-items-center">
                     <div class="about-text">
                         <h1 class="animated animated-text">
-                            <span class="mr-2">n is for</span>
+                            <span class="mr-2">Cheers to the</span>
                                 <div class="animated-info">
-                                    <span class="animated-item">different</span>
-                                    <span class="animated-item">reinvent</span>
-                                    <span class="animated-item">nexbing</span>
+                                    <span class="animated-item">Changemakers</span>
+                                    <span class="animated-item">Misfits</span>
+                                    <span class="animated-item">Redefiners</span>
                                 </div>
                         </h1>
 
@@ -83,7 +83,7 @@ https://www.tooplate.com/view/2115-marvel
                <div class="row">
 
                     <div class="col-lg-12 col-12">                                
-                        <p class="copyright-text text-center">Copyright &copy; 2022 nexbing</p>
+                        <p class="copyright-text text-center">Copyright &copy; 2023 nexbing</p>
                     </div>
                     
                </div>
