--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@ https://www.tooplate.com/view/2115-marvel
                         <h1 class="animated animated-text">
                             <span class="mr-2">Cheers to the</span>
                                 <div class="animated-info">
-                                    <span class="animated-item">Changemakers</span>
+                                    <span class="animated-item">Weird Ones</span>
                                     <span class="animated-item">Misfits</span>
                                     <span class="animated-item">Redefiners</span>
                                 </div>
